<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FHKRoutenplaner</string>
    <string name="startup_search">Search</string>
    <string name="startup_history">History</string>
    <string name="nfc_route">Go!</string>
    <string name="nfc_attach">FH Köln Routenplaner</string>
    <string name="nfc_floor">Etage:</string>
    <string name="nfc_description">Beschreibung:</string>
    <string name="nfc_pos">Aktuelle Position</string>
    <string name="fhk_routenplaner">FH Köln Routenplaner</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="enterName">Namen eingeben...</string>
    <string name="date">Datum</string>
    <string name="enterDate">Datum eingeben...</string>
    <string name="time">Uhrzeit</string>
    <string name="enterTime">Uhrzeit eingeben...</string>
    <string name="start">Start</string>
    <string name="enterStart">Startpunkt auswählen...</string>
    <string name="destination">Ziel</string>
    <string name="enterDestination">Ziel auswählen...</string>
    <string name="startNavigation">Navigation starten</string>
    <string name="title_activity_display_maps">DisplayMapsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btnleft">&lt;&lt;</string>
    <string name="btnright">&gt;&gt;</string>
    <string name="descriptionRoomtype">1. Bitte die Raumkategorie auswählen, die Ihr Ziel hat.</string>
    <string name="descriptionRoom">2. Bitte wählen Sie Ihr genaues Ziel aus.</string>
    <string name="descriptionGoButton">3. Schicken Sie die Routenanfrage ab.</string>
    <string name="saveName">Name Speichern</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="back">Zurück</string>
    <string name="route_running">routeRunning</string>
    <string name="workingDirectory">/FMS/</string>
    <string name="imageFilename">TestIMG-</string>

    <!-- Navigation Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Neue Route</item>
        <item>Route beenden</item>
    </string-array>
    
    <!-- Navigation Drawer Menu Icons -->
    <array name="nav_drawer_icons">
        <item>@drawable/new_route_256</item>
        <item>@drawable/cancel_route_256</item>
    </array>
    
</resources>
