<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <TextView 
        android:id="@+id/activity_headline"
        android:text="@string/fhk_routenplaner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingBottom="100dp" />
    
    <Button
        android:id="@+id/btn_startup_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick_search"
        android:text="@string/startup_search"
        android:layout_below="@id/activity_headline"
        android:layout_centerVertical="true" />

    <Button
        android:id="@+id/btn_startup_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick_history"
        android:text="@string/startup_history"
        android:layout_below="@id/btn_startup_search"
        android:layout_centerVertical="true" />

</RelativeLayout>